force-app/main/default/objects/AlertLog__c/AlertLog__c.object-meta.xml
<CustomObject>
    <pluralLabel>Alert Logs</pluralLabel>
    <fullName>AlertLog__c</fullName>
    <description>Audit trail of all alerts sent for stock price threshold breaches.</description>
    <nameField>
        <label>Alert Record Name</label>
        <type>AutoNumber</type>
        <displayFormat>ALT-{000000}</displayFormat>
    </nameField>
    <sharingModel>Read</sharingModel>
    <label>Alert Log</label>
</CustomObject>