force-app/main/default/objects/AlertLog__c/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <type>LongTextArea</type>
    <length>1000</length>
    <inlineHelpText>Full text of the alert notification including stock symbol, price information, and threshold details. Used for audit purposes and troubleshooting alert delivery.</inlineHelpText>
    <description>The complete alert message text that was sent to users via email or Slack</description>
    <label>Alert Message</label>
</CustomField>