force-app/main/default/objects/AlertLog__c/fields/AlertSentAt__c.field-meta.xml
<CustomField>
    <fullName>AlertSentAt__c</fullName>
    <type>DateTime</type>
    <inlineHelpText>Records when the alert was actually delivered.</inlineHelpText>
    <required>true</required>
    <description>The exact timestamp when the alert notification was sent to external systems or users.</description>
    <label>Alert Sent At</label>
</CustomField>