force-app/main/default/objects/AlertLog__c/fields/AlertStatus__c.field-meta.xml
<CustomField>
    <fullName>AlertStatus__c</fullName>
    <type>Picklist</type>
    <inlineHelpText>Tracks alert delivery progress: Pending (queued), Sent (delivered), Failed (delivery error), Retry (attempting again), Cancelled (stopped before sending).</inlineHelpText>
    <description>Current delivery status of the alert notification, updated by the system during processing.</description>
    <label>Alert Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>