force-app/main/default/objects/AlertLog__c/fields/AlertType__c.field-meta.xml
<CustomField>
    <fullName>AlertType__c</fullName>
    <type>Picklist</type>
    <inlineHelpText>Alert classification: High/Low Threshold alerts are triggered by price movements, System alerts are for technical issues, Manual alerts are user-initiated.</inlineHelpText>
    <required>true</required>
    <description>Categorizes the type of alert that was triggered based on business rules or system events.</description>
    <label>Alert Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>High Threshold</fullName>
            </value>
            <value>
                <fullName>Low Threshold</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>